# tutorial

./: .gitignore  README.md  meson.build
10_1_interfaceAdded_yaml_object_interface_specific_manager_object/: README.md  main_client.cpp
10_1_interfaceAdded_yaml_object_interface_specific_manager_object/com/bytedance/: test.interface.yaml
10_dbus_matches/: README.md  main.cpp  meson.build
10_dbus_matches/10_1_interfaceAdded_yaml_object_interface_specific_manager_object/: main_server.cpp  meson.build
10_dbus_matches/10_1_interfaceAdded_yaml_object_interface_specific_manager_object/com/bytedance/test/: meson.build
10_dbus_matches/10_2_interfaceAdded_object_server/: README.md  main_client.cpp  main_server.cpp  meson.build
10_dbus_matches/10_3_interfaceAdded_object_server_object_manager/: README.md  main_server.cpp  meson.build
